<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer_dialog_prompt"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="This is filler text for the purpose of seeing how the UI will look."
        android:id="@+id/question_dialog_label"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:inputType="textMultiLine"
        android:hint="Your answer here."
        android:ems="10"
        android:id="@+id/answer_editText"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#FF4081"
        android:textColor="#8C000000"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel_action"
            android:textColor="@color/colorPrimary"
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/submit_action"
            android:textColor="@color/colorPrimary"
            android:id="@+id/submit_button"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

</LinearLayout>